quick summary and transparency explanation updated luz page

--- a/child_pages/cc-elections/Candidates/vasquez.html
+++ b/child_pages/cc-elections/Candidates/vasquez.html
@@ -139,17 +139,36 @@
                 <h4 class="quick-sum">quick summary</h4>
                 <h6 class="page-title">Luz Vasquez</h6>
                 <p>
-                Luz Vasquez is running for the Vineland School Board. A lifelong Vineland resident, Vineland High School graduate, and parent,
-                she frames her candidacy around improving student outcomes, supporting staff, keeping schools safe, lowering absenteeism, and
-                ensuring fiscal responsibility for local taxpayers.  
-                <br><br>
-                Vasquez holds a master’s degree in human services and draws on her own experience growing up in a working-class family to emphasize
-                opportunity and resilience. She has been a consistent attendee of school board meetings since 2019, speaking on curriculum and
-                policy changes, and regularly addressing the board on behalf of parents and students.  
-                <br><br>
-                Her agenda highlights collaboration with the board and administration to improve her agenda. She also places a strong emphasis on 
-                parental rights, pledging to advocate for policies that involve parents more directly in educational decisions.  
-                <br><br>
+                <strong>Luz Vasquez</strong> is a Vineland School Board candidate, lifelong Vineland resident and VHS graduate, parent, and a 
+                professional with a master’s in human services. For years she has regularly attended Board of Education meetings—often following up 
+                directly with administrators—so voters can expect a blend of <em>watchdog persistence</em> and <em>positive championing</em> if elected.
+                <br>
+                <br>
+                Her platform is organized around <em>Educate · Empower · Equip</em>:
+                <em>Educate</em> (tighten academics and keep materials age‑appropriate in a safe learning environment),
+                <em>Empower</em> (parents, students, and staff should be able to raise concerns without fear; prefer internal resolution while 
+                respecting teacher voice), and
+                <em>Equip</em> (align programs and resources so graduates are truly ready for next steps).
+                <br>
+                <br>
+                Priority areas discussed in her September 2025 WVLT 92.1 interview include: (1) <strong>Budget transparency</strong>—plain‑English 
+                summaries, handouts, and links so the public can actually follow along; (2) <strong>Graduation readiness</strong>—she cites an 
+                <strong>86.3%</strong> graduation rate vs. a state range around <strong>91–95%</strong> and aims for <strong>95–100%</strong>, 
+                emphasizing fundamentals, time‑on‑task, and better pacing; (3) <strong>Safety</strong>—armed security, staff training 
+                (including awareness of gang dynamics), and tighter entry/door protocols; (4) <strong>Attendance & truancy</strong>—stronger 
+                parent–school bridge, social‑service coordination, and early follow‑ups when flags appear; and (5) 
+                <strong>Staff culture</strong>—ensure educators can speak up without retaliation.
+                <br>
+                <br>
+                Note: a recent public meeting referenced ~<strong>35%</strong> <em>math readiness</em>; we’ll continue to follow up on how that metric 
+                relates to the graduation‑rate figure Vasquez referenced (86.3%). In a live call‑in, she also declined to pre‑commit on a potential 
+                superintendent contract vote, redirecting to her platform and a process‑driven approach.
+                <br>
+                <br>
+                While the race is non‑partisan, Vasquez identifies as conservative and stresses parent involvement and clear communication. This 
+                summary reflects her August 2025 questionnaire plus her September 2025 radio interview. 
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down for more in-depth information and sources.
                 </p>
             </div>
@@ -162,16 +181,30 @@
                 <h4 class="quick-sum">Rating Explanation</h4>
                 <h6 class="page-title">Luz Vasquez</h6>
                 <p>
-                Relative to the Cumberland County status quo, Vasquez’s submission is <strong>above average</strong>. She provided a structured response
-                covering background, agenda, issue stances, and ideological approach—far more comprehensive than many first-time candidates.  
+                <strong>Status:</strong> <em>Above Average</em> for Cumberland County’s baseline.
+                <br>
+                <br>
+                <strong>Why:</strong> Vasquez submitted a structured response to our questionnaire (background, agenda, issue stances) and then 
+                completed a ~1 hour on‑air interview that covered specifics (budget readability, security practices, attendance/truancy mechanics, 
+                graduation‑rate targets). She has a multi‑year track record of attending BOE meetings and doing post‑meeting follow‑ups, which signals 
+                accessibility and persistence beyond campaign season. 
                 <br><br>
-                Her response is <em>generalized</em>, though we hope to gain clarification at our upcoming interview on WVLT (92.1 FM) on Tuesday, 
-                September 9th from 5-6pm. Her stance on parental rights is somewhat clear, but other hot-button district issues (such as facilities, 
-                staffing, or curriculum) are not clear with specifics.  
+                <strong>Areas for further detail (to match best‑practice transparency):</strong>
+                No centralized campaign website yet (Facebook + Instagram are active). Some priorities are still described at a high level 
+                (e.g., which budget visuals, which readiness benchmarks, which security‑protocol changes). No formal public campaign events are 
+                listed so far.
                 <br><br>
-                The transparency here signals seriousness, long-standing community involvement, and a clear conservative perspective. The follow-up 
-                interview and some advertised public events would move her towards top-tier.  
+                <em>Note on ratings & the local status quo:</em> Not being at the very top of the transparency scale shouldn’t be taken personally; 
+                it often reflects countywide norms. In 2025, detailed campaign sites, long‑form interviews, open meet‑and‑greets, and centralized 
+                source hubs should be standard—but they’re not necessarily standard county-wide. Our scale is meant to encourage that norm, not punish 
+                candidates.
+                As of 9/4/2025, her campaign has been the most transparent and accessible in this race, with one other candidate on a seemingly similar 
+                path. With ongoing discussions in the political scene regarding campaign strategies, and general time/resource management in all areas 
+                of life, Luz may not need to do much more this year in relation to this project. But the door is open to dig in deeper if desired.                
                 <br><br>
+                As always, this rating is <em>dynamic</em> and relative to local norms, not a policy endorsement. We’ll update as new evidence comes in. Click the red <strong>x</strong> to close and scroll for sources.
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down for more in-depth information and sources.
                 </p>
             </div>
@@ -461,7 +494,13 @@
                             <p>
                                 Building on prior statements, Vasquez adds that readiness should be evaluated and improved through a cycle of
                                 continuous assessment. She cites a current readiness rate of <strong>86.3%</strong> locally versus roughly
-                                <strong>91–94.9%</strong> statewide, with a state goal of <strong>95–100%</strong>. She wants to reinforce
+                                <strong>91–94.9%</strong> statewide, with a state goal of <strong>95–100%</strong>. 
+                                <br>
+                                Note from InformTheVoteNJ: It was presented at an August school board meeting that math readiness for graduation 
+                                was at 35%, which could be perceived as a bottleneck for overall graduation readiness. We intend to follow up with 
+                                Luz for the discrepancy in stats.
+                                <br>
+                                She wants to reinforce
                                 fundamentals (especially math and reading), ensure students get sufficient time-on-task, and tailor pacing so that
                                 students master core skills before moving on. She is open to more locally responsive curriculum choices when
                                 statewide trends don’t fit community needs.
@@ -575,8 +614,8 @@
                         <details>
                             <summary style="color: blue;"><strong>Lifelong Path of Improvement</strong></summary>
                             <p>
-                                An adult learner who grew up in poverty, Vasquez returned to complete her degrees while raising a family. She cites
-                                education as “the greatest equalizer” and a key to unlocking opportunity.
+                                An adult learner who grew up in poverty, Vasquez returned to her studies to complete her degrees while raising a family. 
+                                She cites education as “the greatest equalizer” and a key to unlocking opportunity.
                             </p>
                         </details>
                     </li><br>
@@ -638,7 +677,7 @@
                 doors to opportunities that would otherwise not be available. I grew up not having a whole lot of money and was determined to change 
                 that for my family. I understand the struggles for families and students just trying to survive. If elected, I can bring that 
                 perspective to the board when committees are brainstorming ways to resolve certain issues. 
-                </p>>
+                </p>
                 <br>
                 <p>
                 As a community member, I have been attending board of education meetings since my kids were in school, but even more since the 
