vineland school board issue test

--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -276,9 +276,58 @@
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
 
                     <details>
-                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 1</summary>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Graduation readiness vs. graduation rate</summary>
                         <p style="margin-top:10px;">
-                            <!-- Content for Issue 1 goes here -->
+                            <strong>What this means, in plain English:</strong> New Jersey gives an 11th-grade test called the NJGPA to check if 
+                            students are “ready for graduation” in English and Math. In Spring 2025 at Vineland High School, about 
+                            <strong>35%</strong> of students tested “ready” in Math, while about <strong>65%</strong> did not. English Language Arts 
+                            was higher (about <strong>65%</strong> ready).
+                        </p>
+
+                        <p>
+                            <strong>Why you might notice a gap:</strong> For 2023–2024, Vineland High School’s four-year graduation rate was 
+                            roughly <strong>86%</strong>. So you’ll see a big difference between “ready” in Math (~35%) and 
+                            graduating (~86%). That doesn’t automatically mean standards are low. New Jersey allows several <em>pathways</em> to meet 
+                            the graduation assessment requirement: students can retake the NJGPA, meet a cut score on approved alternate tests, or 
+                            complete a portfolio appeal. In short: some students graduate by demonstrating readiness through options other than the 
+                            first NJGPA try.
+                        </p>
+
+                        <p>
+                            <strong>Context & trend:</strong> Vineland’s Math “ready” rate has been rising over the last three test cycles 
+                            (about 22% → 29% → 35%), and ELA has also climbed (about 45% → 59% → 65%). That’s encouraging, but the Math gap remains 
+                            large—worth asking candidates how they’ll keep improving.
+                        </p>
+
+                        <p>
+                            <strong>Important caution:</strong> The readiness data (Spring 2025) and the graduation rate (Class of 2024) are from 
+                            <em>different cohorts and years</em>. Treat the ~50-point difference as a prompt for questions, not a firm conclusion 
+                            about policy success or failure.
+                        </p>
+
+                        <p>
+                            <strong>Ask the candidates:</strong>
+                        </p>
+                        <ul style="margin-top:6px;">
+                            <li>How will you raise Math readiness beyond ~35% while maintaining high standards?</li>
+                            <li>Are curriculum, grading, or course expectations being raised, held steady, or eased—and why?</li>
+                            <li>What specific supports (e.g., math labs, tutoring, schedule changes) will you prioritize and fund?</li>
+                            <li>How will you report progress to the public in clear, easy-to-read updates each year?</li>
+                            <li>What’s your plan to ensure a Vineland diploma reflects real mastery, not just completion?</li>
+                        </ul>
+
+                        <p style="margin-top:10px;">
+                            <a href="/assets/pdfs/njGPA.pdf"
+                                target="_blank" rel="noopener"
+                                type="application/pdf">
+                                📄 View the 2025 NJGPA Results (PDF)
+                            </a>
+                        </p>
+
+                        <p style="margin-top:10px;">
+                            <strong>Source:</strong>
+                            <a href="https://www.nj.gov/education/spr/tableau_dashboard.shtml?CountyCode=11&DistrictCode=5390&SchoolCode=050&viewType=school&rptType_s=3" target="_blank" rel="noopener">NJDOE School Performance Reports (Vineland HS)</a>
+                            – see the “Graduation” tab for the latest 4-year graduation rate.
                         </p>
                     </details>
 
@@ -296,11 +345,9 @@
                         </p>
                     </details>
 
-            </details>
-
-            
-
+            </details>     
         </div>
+
         <br>
 
         <!-- <button class="quick-summary-reopen">quick election summary</button> -->
