screenshot added for vsb issues

--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -327,8 +327,21 @@
                         <p style="margin-top:10px;">
                             <strong>Source:</strong>
                             <a href="https://www.nj.gov/education/spr/tableau_dashboard.shtml?CountyCode=11&DistrictCode=5390&SchoolCode=050&viewType=school&rptType_s=3" target="_blank" rel="noopener">NJDOE School Performance Reports (Vineland HS)</a>
-                            – see the “Graduation” tab for the latest 4-year graduation rate.
+                            – for desktop google chrome users.
                         </p>
+
+                        <figure style="margin:0 0 16px 0;">
+                            <a href="/assets/screenshots/vsbGraduationRates.PNG" target="_blank" rel="noopener">
+                                <img src="/assets/screenshots/vsbGraduationRates.PNG"
+                                    alt="Slide from 'NJGPA Results: Spring 2025' showing Vineland HS ELA and Math readiness percentages (e.g., ~65% ELA, ~35% Math)."
+                                    loading="lazy" style="max-width:100%; height:auto; border:1px solid #ddd; border-radius:8px;">
+                            </a>
+                            <figcaption style="font-size:0.95em; color:#444; margin-top:6px;">
+                                Screenshot of <em>Vineland High School Graduation Rates 2023-2024</em>. Captured September 4, 2025.
+                                For people using mobile phone or Mac or not chrome.
+                                <a href="/assets/docs/njgpa-spring-2025.pdf" target="_blank" rel="noopener">Open the PDF</a>.
+                            </figcaption>
+                        </figure>
                     </details>
 
                     <details>
