--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -244,12 +244,9 @@
     <div class="candidate-pic-box-content">
       <h4 class="sub-heading" style="text-align: center;">Websites</h4>
       <div class="website">
-        <!-- Replace with real links as available -->
-        <!-- Example:
-        <a href="https://www.facebook.com/..." target="_blank" rel="noopener noreferrer" class="website-link">
-          <button class="candidate-ext-site">Facebook</button>
-        </a>
-        -->
+
+         <a href="https://www.facebook.com/Danhotlikefiregregoire" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
+
         <span style="display:block; text-align:center; font-size:0.95rem; opacity:0.9;">(Links will appear here as they’re available.)</span>
       </div>
 
