gregoire quick summary condensed

--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -142,35 +142,19 @@
     <h4 class="quick-sum">quick summary</h4>
     <h6 class="page-title">Daniel Gregoire</h6>
     <p>
-      Daniel Gregoire is a Millville resident (since 2012) with 40+ years in water and wastewater systems, quality control, and field operations. 
-      He describes himself as a hands-on problem-solver who “wears many hats,” drawing a line between whole-system operations in utilities and the 
-      coordination required in city government. He’s also been active in the Knights of Columbus at multiple levels, which he says taught him 
-      leadership and organization.
-      <br><br>
-
-      His campaign themes center on <em>cleaning up the city, restoring first impressions,</em> and <em>driving economic renewal.</em> He wants 
-      Millville to hire an experienced economic development lead (and leverage grants/bonds to fund that position), pursue business growth that 
-      expands the ratable base, and be pragmatic about incentives so Millville competes with neighboring towns. He repeatedly ties storefront blight, 
-      shopping carts, panhandling, and homelessness to the city’s “first impression” for investors and families, and favors coordinated solutions 
-      (staffing plus community partners, regional best-practice sharing, and exploring options like a halfway house and a designated point person).
-      <br><br>
-
-      Infrastructure, safety, and code enforcement round out his focus: he calls for more road repairs (and clarity on street-opening funds), a 
-      strategy for illegal ATVs/dirt bikes (through networking with other municipalities and state legislators), and aggressive cleanup of 
-      abandoned/vacant properties—including exploring abandoned-property sales to get houses rehabbed into single-family homes. He supports 
-      building healthy youth outlets (e.g., bringing back roller-rink-style activities) and emphasizes cultural expectations set by parents.
-      <br><br>
-
-      Internally, he argues the city is short-staffed, losing good workers to better-paying towns, and lacking equipment (e.g., an additional street 
-      sweeper). He’d seek grants (e.g., Clean Communities) to help fund hires/equipment and wants “city-wide” sweeping and park/street care. On 
-      communication, he proposes multiple channels—more proactive explanations of changes (like solid-waste billing), better follow-up to public 
-      comments, and an email/suggestion box for residents who can’t attend or are uncomfortable speaking at meetings. He also questions water 
-      shut-offs for families in hardship and prefers alternative collection tools (e.g., tax sale) while designing better payment plans.
-      <br><br>
-
-      His pitch is direct: be a “united front” of employees and residents, do the work, and make Millville competitive again. He frames the choice as 
-      practical—fix first impressions, attract investment, and staff up to deliver visible city services.
-      <br><br>
+    Daniel Gregoire has lived in Millville since 2012 and brings 40+ years in water/wastewater systems, quality control, and field operations. He presents himself as a hands-on, 
+    whole-systems problem-solver with leadership experience in the Knights of Columbus. His priorities: clean up the city and fix “first impressions,” hire an experienced economic 
+    development lead (funded via grants/bonds), grow the ratable base, and use pragmatic incentives so Millville competes with neighboring towns. He links storefront blight, stray 
+    shopping carts, panhandling, and homelessness to investor confidence and favors coordinated solutions with staffing, community partners, and a designated point person.
+    </p>
+    <br>
+    <p>
+    He also calls for more road repairs (with clarity on street-opening funds), a regional strategy on illegal ATVs/dirt bikes, and stronger code enforcement—including moving abandoned 
+    properties to rehab-minded owners. Internally, he argues the city is short-staffed and under-equipped; he’d seek grants (e.g., Clean Communities) for hires and a second street sweeper, 
+    with city-wide sweeping and park/street care. On communication, he wants plain-English explanations of policy changes, follow-through on public comments, and a suggestion email/box; 
+    for utilities, he prefers payment plans and tax-sale tools over shutting off water for families in hardship. His pitch: unite employees and residents, execute visibly, and make 
+    Millville competitive again.
+    </p>
       Click the red x at the top of this box and then scroll down for more in-depth information and sources.
     </p>
   </div>
@@ -248,7 +232,7 @@
          <a href="https://www.facebook.com/Danhotlikefiregregoire" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
         <a href="https://www.facebook.com/profile.php?id=61579965870836" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Facebook</button></a>
 
-        <span style="display:block; text-align:center; font-size:0.95rem; opacity:0.9;">(Links will appear here as they’re available.)</span>
+        
       </div>
 
       <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
@@ -274,25 +258,6 @@
   </div>
 
   <br><br>
-
-  <!-- If you publish a video later, drop it here and keep the same structure -->
-  <div class="video-box-modal can-sec">
-    <h3 class="video-heading">Candidate Conversation with Daniel Gregoire</h3>
-    <!-- Optional: Add iframe when available
-    <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="YouTube video player" frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    -->
-    <br>
-    <details style="border: 2px solid #007BFF; border-radius: 5px; padding: 1em; background-color: #E9F5FF;">
-      <summary style="font-weight: bold; color: #007BFF; font-size: 1.1em;">Interview Notes / Description</summary>
-      <p>
-        Summary of sit-down interview and written responses: economic leadership hire; “first impression” cleanup; grants/bonds for 
-        staffing/equipment; abandoned-property pipeline; pragmatic business incentives; alternative approaches to utility collections for families 
-        in hardship; resident suggestion email/box and better follow-ups to public comments; coordination with other towns/state on ATVs/dirt bikes.
-      </p>
-    </details>
-  </div>
 
   <div class="candidate-agenda">
     <h4 class="sub-heading">Overall Agenda and Positions</h4>
