ciatarelli town hall event added

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -148,6 +148,17 @@
 
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Ciatarelli Town Hall in Pitman</strong></li>
+                    <li class="description">Town Hall Event featuring JACK CIATTARELLI, Republican Candidate for Governor.
+                       <a href="https://www.facebook.com/share/1YNVoeaPM5/">Facebook Link with RSVP details</a> 
+                    </li>
+                    <li class="date-and-time">11/4/25</li>
+                    <li class="location">Broadway Theatre of Pitman, 43 S Broadway, Pitman, NJ 08071</li>
+                </ul>
+            </div>     
+
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Vote!</strong></li>
                     <li class="description">Go vote</li>
                     <li class="date-and-time">11/4/25</li>
