issues page removed from index page hamburger

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </div>
                         </div>
 
-                        <div class="accordion">
+                        <!-- <div class="accordion">
                             <input type="checkbox" name="accordion" id="fourth">
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
@@ -128,22 +128,22 @@
 
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
 
-                                <!-- <li class="link"><a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
+                                 <li class="link"><a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li>
 
                                 <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/governor_issues.html">Governor Issues</a></li>
-                                <!-- <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                                 <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_senate_issues.html">US Senate Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/us_president_issues.html">President Issues</a></li> -->
+                                <li class="link"><a href="child_pages/cc-elections/us_president_issues.html">President Issues</a></li>
                             </div>
-                        </div>
+                        </div> -->
 
                         <li class="link"><a href="child_pages/get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="child_pages/events.html">Events</a></li>
