taylor and gregoire update

--- a/child_pages/cc-elections/Candidates/taylor_sherman.html
+++ b/child_pages/cc-elections/Candidates/taylor_sherman.html
@@ -228,7 +228,7 @@
   </div>
 
   <div class="candidate-pic-box">
-    <img class="cover" src="../../../assets/candidates/taylor.jpg" alt="Sherman R. Taylor headshot" class="candidate-pic">
+    <img class="cover" src="../../../assets/candidates/taylor_sherman.jpg" alt="Sherman R. Taylor headshot" class="candidate-pic">
     <div class="candidate-pic-box-content">
       <h4 class="sub-heading" style="text-align: center;">Websites</h4>
       <div class="website">
@@ -255,7 +255,7 @@
     <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link">
       <button class="candidate-ext-site">Transparency Standards Explained</button>
     </a>
-    <img class="gauge" src="../../../assets/gauge_developing.svg" alt="transparency rating gauge - developing">
+    <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="transparency rating gauge - developing">
     <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
   </div>
 
@@ -263,7 +263,7 @@
 
   <!-- Interviews / Media Section (placeholder until videos are available) -->
   <div class="video-box-modal can-sec">
-    <h3 class="video-heading">Interviews & Media</h3>
+    <h3 class="video-heading">Videos</h3>
     <details style="border: 2px solid #007BFF; border-radius: 5px; padding: 1em; background-color: #E9F5FF;">
       <summary style="font-weight: bold; color: #007BFF; font-size: 1.1em;">Status</summary>
       <p>No long-form interview posted here yet. As soon as a radio/podcast/video conversation is recorded, it will appear with timestamps 
@@ -380,7 +380,7 @@
     </div>
 
     <br>
-    <h4 class="sub-heading">Experience (Selected)</h4>
+    <h4 class="sub-heading">Experience</h4>
     <div class="experience can-sec">
       <h4>Emergency Services & Public Safety</h4>
       <ul>
