kott page update

--- a/child_pages/cc-elections/Candidates/taylor_sherman.html
+++ b/child_pages/cc-elections/Candidates/taylor_sherman.html
@@ -177,7 +177,8 @@
       of whether these 3 candidates are campaigning together without publicly saying so.
       <br><br>
       What would move this rating up: a central campaign site with organized agenda/issue pages; coordinated communication with the press; long-form 
-      interviews (radio/podcast/video); and timely replies to voter/media inquiries. As those pieces appear, we’ll update the rating to reflect real-world 
+      interviews (radio/podcast/video); a truly public and advertised campaign event; and timely replies to voter/media inquiries. As those pieces appear, 
+      we’ll update the rating to reflect real-world 
       accessibility for voters. The main benefit for voters with this candidate and many others is to engage in the action plans that describe how his 
       campaign ideas will actually materialize if they get elected.
       <br><br>
