--- a/child_pages/cc-elections/Candidates/kott.html
+++ b/child_pages/cc-elections/Candidates/kott.html
@@ -255,7 +255,7 @@
     <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link">
       <button class="candidate-ext-site">Transparency Standards Explained</button>
     </a>
-    <img class="gauge" src="../../../assets/gauge_developing.svg" alt="transparency rating gauge - developing">
+    <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="transparency rating gauge - developing">
     <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
   </div>
 
@@ -440,7 +440,7 @@
     </div>
 
     <br>
-    <h4 class="sub-heading">Experience (Selected)</h4>
+    <h4 class="sub-heading">Experience</h4>
     <div class="experience can-sec">
       <h4>Public Service & Safety</h4>
       <ul>
