quick sum and rating button debug fix kott and branin pages

--- a/child_pages/cc-elections/Candidates/branin.html
+++ b/child_pages/cc-elections/Candidates/branin.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
-        <script src="../../../dual_model_candidate.js" async></script>
+        
         <title>Inform The Vote</title>
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate Newell Branin">
@@ -24,6 +24,7 @@
 
   gtag('config', 'G-64FQD2P8BV');
 </script>
+<script src="../../../dual_model_candidate.js" async></script>
     <body>
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
@@ -247,7 +248,7 @@
     <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link">
       <button class="candidate-ext-site">Transparency Standards Explained</button>
     </a>
-    <img class="gauge" src="../../../assets/gauge_developing.svg" alt="transparency rating gauge - developing">
+    <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="transparency rating gauge - developing">
     <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
   </div>
 
